@@ -45,7 +45,7 @@
 #include <rtai/cond.h>
 #include <rtai/registry.h>
 
-#if defined(CONFIG_PROC_FS) && defined(__KERNEL__)
+#if CONFIG_RTAI_NATIVE_EXPORT_REGISTRY
 
 static ssize_t __cond_read_proc (char *page,
 				 char **start,
@@ -102,14 +102,14 @@ static RT_OBJECT_PROCNODE __cond_pnode = {
     .write_proc = NULL
 };
 
-#else /* !(CONFIG_PROC_FS && __KERNEL__) */
+#elif CONFIG_RTAI_OPT_NATIVE_REGISTRY
 
 static RT_OBJECT_PROCNODE __cond_pnode = {
 
     .type = "condvars"
 };
 
-#endif /* CONFIG_PROC_FS && __KERNEL__ */
+#endif /* CONFIG_RTAI_NATIVE_EXPORT_REGISTRY */
 
 /**
  * @fn int rt_cond_create(RT_COND *cond,
