@@ -42,7 +42,7 @@
 #include <rtai/event.h>
 #include <rtai/registry.h>
 
-#if defined(CONFIG_PROC_FS) && defined(__KERNEL__)
+#if CONFIG_RTAI_NATIVE_EXPORT_REGISTRY
 
 static ssize_t __event_read_proc (char *page,
 				char **start,
@@ -110,14 +110,14 @@ static RT_OBJECT_PROCNODE __event_pnode = {
     .write_proc = NULL
 };
 
-#else /* !(CONFIG_PROC_FS && __KERNEL__) */
+#elif CONFIG_RTAI_OPT_NATIVE_REGISTRY
 
 static RT_OBJECT_PROCNODE __event_pnode = {
 
     .type = "events"
 };
 
-#endif /* CONFIG_PROC_FS && __KERNEL__ */
+#endif /* CONFIG_RTAI_NATIVE_EXPORT_REGISTRY */
 
 /**
  * @fn int rt_event_create(RT_EVENT *event,
