@@ -45,7 +45,7 @@
 #include <rtai/queue.h>
 #include <rtai/registry.h>
 
-#if defined(CONFIG_PROC_FS) && defined(__KERNEL__)
+#if CONFIG_RTAI_NATIVE_EXPORT_REGISTRY
 
 static ssize_t __queue_read_proc (char *page,
 				  char **start,
@@ -108,14 +108,14 @@ static RT_OBJECT_PROCNODE __queue_pnode = {
     .write_proc = NULL
 };
 
-#else /* !(CONFIG_PROC_FS && __KERNEL__) */
+#elif CONFIG_RTAI_OPT_NATIVE_REGISTRY
 
 static RT_OBJECT_PROCNODE __queue_pnode = {
 
     .type = "queues"
 };
 
-#endif /* CONFIG_PROC_FS && __KERNEL__ */
+#endif /* CONFIG_RTAI_NATIVE_EXPORT_REGISTRY */
 
 static void __queue_flush_private (xnheap_t *heap,
 				   void *poolmem,
