@@ -1,3 +1,8 @@
+2005-01-18  Philippe Gerum  <rpm@xenomai.org>
+
+	* skins/rtai/Kconfig: Do not make the registry support depend from
+	from RTAI_OPT_FUSION.
+
 2005-01-18  Max Krasnyansky <maxk@qualcomm.com>
 
 	* testsuite/switch: Add test measuring how long it takes to switch
